--- a/package.json
+++ b/package.json
@@ -83,6 +83,7 @@
         "check-password-strength": "^2.0.5",
         "cheerio": "~1.0.0-rc.12",
         "chroma-js": "~2.4.2",
+        "codemirror": "^5.65.20",
         "command-exists": "~1.2.9",
         "compare-versions": "~3.6.0",
         "compression": "~1.8.1",
